<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Tweets</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="relative_time_stamp">Relative Timestamp</string>
    <string name="body">body</string>
    <string name="error">error message</string>
    <string name="compose">compose</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="name">name</string>
    <string name="tweet">tweet</string>
    <string name="tweet_body_hint">What\'s happening?</string>
    <string name="left_char_number">left char number</string>
    <string name="title_activity_detailed_view">DetailedViewActivity</string>
    <string name="timestamp">timestamp</string>
    <string name="retweet_count">retweet count</string>
    <string name="retweets">RETWEETS</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tag_line">Tagline</string>
    <string name="follower">{:count} Followers</string>
    <string name="followers">{:count} Follower</string>
    <string name="following">{:count} Following</string>

    <string name="error_loading_user_info">Cannot load user information, please try again later.</string>
    <string name="error_loading_tweets">Cannot load tweets, please try again later.</string>
    <string name="retweet_label">{:name} Retweeted</string>
    <string name="retweet_label_you">You</string>

</resources>