<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.restclienttemplate.activities.ComposeActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivComposeUserProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/tvComposeName"
        android:layout_toRightOf="@+id/ivComposeUserProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvComposeUsername"
        android:layout_toRightOf="@+id/ivComposeUserProfileImage"
        android:layout_below="@+id/tvComposeName"
        android:layout_alignBottom="@+id/ivComposeUserProfileImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="bottom" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTweet"
        android:layout_below="@+id/ivComposeUserProfileImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/grey"
        android:background="#00000000"
        android:layout_marginTop="10dp"
        android:text="@string/tweet_body_hint" />
</RelativeLayout>
