<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.restclienttemplate.activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rlUserHeader">

        <ImageView
            android:id="@+id/ivUserProfileImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_profile"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivUserProfileImage"
            android:text="@string/name"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvUserTagLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserName"
            android:layout_toRightOf="@+id/ivUserProfileImage"
            android:text="@string/tag_line"
            android:textSize="12sp"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator"
        android:visibility="visible"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/rlUserHeader" />

    <LinearLayout
        android:id="@+id/llCounts"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rlUserHeader">

        <TextView
            android:id="@+id/tvFollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textSize="16sp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator2"
        android:visibility="visible"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/llCounts" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/flContainer"
        android:layout_below="@+id/separator2">

    </FrameLayout>
</RelativeLayout>
